--- a/doc/服务器列表.md
+++ b/doc/服务器列表.md
@@ -1,12 +1,68 @@
+# 云服务器
+
 # postgre 数据库测试
+
 - IP:47.102.41.181
 - 用户名:administrator
 - 密码:To@bee#agp
 
-# 生产环境1 
-IP:118.25.46.204
-用户名:administrator
-密码:huaide#135con
+### DB
 
-# mqtt测试成功
+```
+Host=47.102.41.181;Port=5432;Database=postgres;Username=postgres;Password=123456
+```
 
+## 数据库 webservice 数据转发
+
+- 服务器未知，通过远程进行的部署
+
+### DB
+
+```
+Host=118.31.237.242;Port=5432;Database=aiqi_dust_s7;Username=aqhj_admin;Password=aqhj#dust_s7
+```
+
+## mqtt
+
+- IP:118.25.46.204
+- 用户名:administrator
+- 密码:huaide#135con
+
+## 艾启
+
+- IP:118.31.237.242
+- 用户名:administrator
+- 密码:SHLD@nagisa#118
+
+### DB
+
+```
+Host=118.25.103.173;Port=5432;Database=ESysAiqiMaster;Username=postgres;Password=LD@na#1224!psg
+
+```
+
+## 龙涤
+
+- IP:122.51.188.91
+- 用户名:Administrator
+- 密码::HzFRPgrlguME9!G&xvt#fT\*RZU1rhu
+
+### DB
+
+```
+Host=122.51.188.91;Port=57702;Database=ESysMaster;Username=postgres;Password=mqpxYOcKd36x^&bZ$!XBjRBCMoSE3I
+```
+
+### 管理服务
+
+用于 web 登录查看 已知内容
+
+- `http://122.51.188.91:28666/admin/login/?next=/admin/monitor/device/1380/change/`
+- usr:`zhoufeng_admin`
+- psw:`zf@admin19`
+
+## 其他（2025 废弃）
+
+- IP:106.14.187.149
+- 用户名:administrator
+- 密码:DO7qSJdsQyx9kb&3x3GF^FxLyiWN^NYY
