--- a/doc/服务器列表.md
+++ b/doc/服务器列表.md
@@ -1,5 +1,27 @@
 # 云服务器
+## 阿里云
+- user:`jinadmin@1417802884206041.onaliyun.com`
+- psw:`E@OF7IXY4dHkfxLe3k7a`
 
+## 设备管理
+- web:`http://isodev.picp.net:9000/Home/lndex`
+- 用户名:`Shld123`
+- 密码:`shld@111`
+- 设备连接端口:`9002`
+
+- 64412设备可用于测试
+	- 64655
+	- 64776
+		- 对外协议`118.25.46.204:9001` 
+		- 对内协议`118.25.46.204:9000` 
+## 管理服务
+
+用于 web 登录查看 已知内容
+
+- `http://122.51.188.91:28666/admin/login/?next=/admin/monitor/device/1380/change/`
+- usr:`zhoufeng_admin`
+- psw:`zf@admin19`
+---
 # postgre 数据库测试
 
 - IP:47.102.41.181
@@ -45,7 +67,7 @@ Host=118.25.103.173;Port=5432;Database=ESysAiqiMaster;Username=postgres;Password
 
 - IP:122.51.188.91
 - 用户名:Administrator
-- 密码::HzFRPgrlguME9!G&xvt#fT\*RZU1rhu
+- 密码:HzFRPgrlguME9!G&xvt#fT\*RZU1rhu
 
 ### DB
 
@@ -53,13 +75,6 @@ Host=118.25.103.173;Port=5432;Database=ESysAiqiMaster;Username=postgres;Password
 Host=122.51.188.91;Port=57702;Database=ESysMaster;Username=postgres;Password=mqpxYOcKd36x^&bZ$!XBjRBCMoSE3I
 ```
 
-### 管理服务
-
-用于 web 登录查看 已知内容
-
-- `http://122.51.188.91:28666/admin/login/?next=/admin/monitor/device/1380/change/`
-- usr:`zhoufeng_admin`
-- psw:`zf@admin19`
 
 ## 其他（2025 废弃）
 
